tests/NormalTests/paczka1/fuzzy1/40985456.err
Error in line 4: yZ7o4IBR S619 23,2
Error in line 6: A388 A388 72,9
Error in line 9: A388 S839 -1,7
Error in line 10: gjWfIOSiN S85 6,6
Error in line 19: gjWfIOSiN S85 20,1
Error in line 5: yZ7o4IBR S85 59,9
Error in line 34: A388 S839 32,6
Error in line 35: A388 S619 17,4
Error in line 36: A388 S85 5,8
